--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "expo": "^49.0.3",
